--- a/gb/19/11/3/n11630428.md
+++ b/gb/19/11/3/n11630428.md
@@ -1,56 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lpbpi2994/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/lpbpi2994/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/lpbpi2994/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/lpbpi2994/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/lpbpi2994/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/lpbpi2994/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/lpbpi2994/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/lpbpi2994/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/lpbpi2994/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/lpbpi2994/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/lpbpi2994/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>¶«±±·çÔöÇ¿ Ì¨ÍåÎ´À´Ò»ÖÜÊªÁ¹</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/11/ae669104e1faa20f520d221a72bf2c79-600x400.png" />
-<h6>Ô­Î»ÓÚ¹Øµº¸½½üÉú³ÉµÄÈÈ´øµÍÑ¹£¬ÔÚÖÜÈÕ£¨3ÈÕ£©Áè³¿2Ê±ÒÑ·¢Õ¹Îª½ñÄêµÚ23ºÅÌ¨·ç¹þÂ¡£¬µ«²»»á¶ÔÌ¨ÍåÔì³ÉÓ°Ïì¡£ £¨ÖÐÑëÆøÏó¾ÖÌá¹©£©
-</h6>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oqzulz329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/oqzulz329/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/oqzulz329/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/oqzulz329/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/oqzulz329/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ä¸œåŒ—é£Žå¢žå¼º å°æ¹¾æœªæ¥ä¸€å‘¨æ¹¿å‡‰</h2>
+
+<h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê11ÔÂ03ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÀµçäÈãÌ¨ÍåÌ¨±±±¨µ¼£©Ì¨ÍåÎ´À´Ò»ÖÜ½«ÊÜµ½¶«±±·çÓ°Ïì£¬ÖÜÒ»£¨4ÈÕ£©ÆðÔÚ¶«±±·çÔöÇ¿ºó£¬Ó­·çÃæ±±²¿µØÇøË®ÆûÔö¼Ó½µÓê¸ÅÂÊÔö£¬ÖÜÈý£¨6ÈÕ£©¶«±±·çÉÔ¼õÈõ¡¢³öÏÖ½µÓê¿Õµµ£¬µ«¶«±±²¿Ïà½ÏÆäÓàµØÇøÈÔÓÐ»ú»á³öÏÖ½µÓê¡£ÁíÍâ£¬½ñÄêµÚ23ºÅÌ¨·ç¹þÂ¡Ò²ÔÚÖÜÈÕ£¨3ÈÕ£©Áè³¿2µãÉú³É£¬µ«¶ÔÌ¨Íå²»»áÔì³ÉÓ°Ïì¡£</p>
-<p>ÆøÏó¾Ö±íÊ¾£¬Î´À´Ò»ÖÜÊÜµ½¶«±±·çÓ°Ïì£¬Ó­·çÃæ±±²¿¼°¶«°ë²¿µØÇø½µÓê¸ÅÂÊÔö¼Ó£¬ÔÚÖÜÈý£¨£µÈÕ£©¶«±±·çÉÔ¼õÈõ£¬»á³öÏÖ¿Õµµ¡¢Ë®Æû½ÏÉÙÇéÐÎ£¬µ«¶«±±²¿µØÇøÏà½ÏÆäÓàµØÇø»¹ÊÇ³öÏÖ½µÓêÇéÐÎ£¬¶ø±±²¿¼°¶«²¿µØÇø»áÓÐ¾Ö²¿¶ÌÔÝÓê¡¢¶«ÄÏ²¿µØÇøÓÐÁãÐÇ¶ÌÔÝÓê¡£</p>
-<p>ÖÜËÄÆð£¬Ëæ×Å¶«±±·çÔöÇ¿£¬¶«±±²¿µØÇø½«»á³ÖÐø½µÓê£¬±±²¿¡¢¶«²¿µØÇøÈÔÎ¬³Ö¾Ö²¿¶ÌÔÝÓê<a href="https://github.com/lpbpi2994/djy/blob/master/gb/tag/%E5%A4%A9%E6%B0%94.md">ÌìÆø</a>£¬¶«ÄÏ²¿µØÇøÔòÓÐÁãÐÇ¶ÌÔÝÓê¡£</p>
-<p>ÁíÍâÔÚÎÂ¶È·½Ãæ£¬Î´À´Ò»ÖÜ¸÷µØÔçÍí½ÔÓÐÁ¹Òâ£¬¸÷µØµÍÎÂÔ¼ÔÚ20ÖÁ22¶ÈÖ®¼ä£¬ÆäÖÐ»ùÂ¡¡¢Ì¨±±¼°ÌÒÔ°µØÇøÌå¸ÐÎÂ¶È½«ÏÂÌ½18¶È£¬¶øÖÐÄÏ²¿µØÇøÔòÎ¬³Ö¶àÔÆµ½ÇçµÄ<a href="https://github.com/lpbpi2994/djy/blob/master/gb/tag/%E5%A4%A9%E6%B0%94.md">ÌìÆø</a>£¬½öÎçºóÄÏ²¿É½Çø½«³öÏÖÁãÐÇ¶ÌÔÝÕóÓê¡£</p>
-<p>ÁíÍâ£¬Ô­ÏÈÎ»ÓÚ¹Øµº¸½½üÉú³ÉµÄÈÈ´øµÍÑ¹£¬ÔÚÖÜÈÕ£¨3ÈÕ£©Áè³¿2µãÒÑ·¢Õ¹Îª½ñÄêµÚ23ºÅÌ¨·ç¹þÂ¡£¬Ä¿Ç°ÖÐÐÄÎ»ÖÃÎ»ÓÚ±±Î³13.6¶È£¬¶«¾­156.7¶È£¬²¢ÒÔÃ¿Ð¡Ê±19¹«ÀïËÙ¶È³ÖÐøÏòÎ÷±±Ç°½ø¡£ÌìÆø·çÏÕ¹«Ë¾×Ü¾­ÀíÅíÆôÃ÷·ÖÎö£¬½ñÄêµÚ23ºÅ¹þÂ¡Ì¨·ç£¬Ô¤¼ÆÎ´À´ÏòÎ÷Ç°½øºó±±×ª£¬¶ÔÌ¨ÍåÎÞÖ±½ÓÓ°Ïì¡£¡ó</p>
-<p>ÔðÈÎ±à¼­£ºÓñÕä</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´11æœˆ03æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…èµ–çŽŸèŒ¹å°æ¹¾å°åŒ—æŠ¥å¯¼ï¼‰å°æ¹¾æœªæ¥ä¸€å‘¨å°†å—åˆ°ä¸œåŒ—é£Žå½±å“ï¼Œå‘¨ä¸€ï¼ˆ4æ—¥ï¼‰èµ·åœ¨ä¸œåŒ—é£Žå¢žå¼ºåŽï¼Œè¿Žé£Žé¢åŒ—éƒ¨åœ°åŒºæ°´æ±½å¢žåŠ é™é›¨æ¦‚çŽ‡å¢žï¼Œå‘¨ä¸‰ï¼ˆ6æ—¥ï¼‰ä¸œåŒ—é£Žç¨å‡å¼±ã€å‡ºçŽ°é™é›¨ç©ºæ¡£ï¼Œä½†ä¸œåŒ—éƒ¨ç›¸è¾ƒå…¶ä½™åœ°åŒºä»æœ‰æœºä¼šå‡ºçŽ°é™é›¨ã€‚å¦å¤–ï¼Œä»Šå¹´ç¬¬23å·å°é£Žå“ˆéš†ä¹Ÿåœ¨å‘¨æ—¥ï¼ˆ3æ—¥ï¼‰å‡Œæ™¨2ç‚¹ç”Ÿæˆï¼Œä½†å¯¹å°æ¹¾ä¸ä¼šé€ æˆå½±å“ã€‚</p>
+<p>æ°”è±¡å±€è¡¨ç¤ºï¼Œæœªæ¥ä¸€å‘¨å—åˆ°ä¸œåŒ—é£Žå½±å“ï¼Œè¿Žé£Žé¢åŒ—éƒ¨åŠä¸œåŠéƒ¨åœ°åŒºé™é›¨æ¦‚çŽ‡å¢žåŠ ï¼Œåœ¨å‘¨ä¸‰ï¼ˆï¼•æ—¥ï¼‰ä¸œåŒ—é£Žç¨å‡å¼±ï¼Œä¼šå‡ºçŽ°ç©ºæ¡£ã€æ°´æ±½è¾ƒå°‘æƒ…å½¢ï¼Œä½†ä¸œåŒ—éƒ¨åœ°åŒºç›¸è¾ƒå…¶ä½™åœ°åŒºè¿˜æ˜¯å‡ºçŽ°é™é›¨æƒ…å½¢ï¼Œè€ŒåŒ—éƒ¨åŠä¸œéƒ¨åœ°åŒºä¼šæœ‰å±€éƒ¨çŸ­æš‚é›¨ã€ä¸œå—éƒ¨åœ°åŒºæœ‰é›¶æ˜ŸçŸ­æš‚é›¨ã€‚</p>
+<p>å‘¨å››èµ·ï¼Œéšç€ä¸œåŒ—é£Žå¢žå¼ºï¼Œä¸œåŒ—éƒ¨åœ°åŒºå°†ä¼šæŒç»­é™é›¨ï¼ŒåŒ—éƒ¨ã€ä¸œéƒ¨åœ°åŒºä»ç»´æŒå±€éƒ¨çŸ­æš‚é›¨<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E5%A4%A9%E6%B0%94.md#1">å¤©æ°”</a>ï¼Œä¸œå—éƒ¨åœ°åŒºåˆ™æœ‰é›¶æ˜ŸçŸ­æš‚é›¨ã€‚</p>
+<p>å¦å¤–åœ¨æ¸©åº¦æ–¹é¢ï¼Œæœªæ¥ä¸€å‘¨å„åœ°æ—©æ™šçš†æœ‰å‡‰æ„ï¼Œå„åœ°ä½Žæ¸©çº¦åœ¨20è‡³22åº¦ä¹‹é—´ï¼Œå…¶ä¸­åŸºéš†ã€å°åŒ—åŠæ¡ƒå›­åœ°åŒºä½“æ„Ÿæ¸©åº¦å°†ä¸‹æŽ¢18åº¦ï¼Œè€Œä¸­å—éƒ¨åœ°åŒºåˆ™ç»´æŒå¤šäº‘åˆ°æ™´çš„<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E5%A4%A9%E6%B0%94.md#1">å¤©æ°”</a>ï¼Œä»…åˆåŽå—éƒ¨å±±åŒºå°†å‡ºçŽ°é›¶æ˜ŸçŸ­æš‚é˜µé›¨ã€‚</p>
+<p>å¦å¤–ï¼ŒåŽŸå…ˆä½äºŽå…³å²›é™„è¿‘ç”Ÿæˆçš„çƒ­å¸¦ä½ŽåŽ‹ï¼Œåœ¨å‘¨æ—¥ï¼ˆ3æ—¥ï¼‰å‡Œæ™¨2ç‚¹å·²å‘å±•ä¸ºä»Šå¹´ç¬¬23å·å°é£Žå“ˆéš†ï¼Œç›®å‰ä¸­å¿ƒä½ç½®ä½äºŽåŒ—çº¬13.6åº¦ï¼Œä¸œç»156.7åº¦ï¼Œå¹¶ä»¥æ¯å°æ—¶19å…¬é‡Œé€Ÿåº¦æŒç»­å‘è¥¿åŒ—å‰è¿›ã€‚å¤©æ°”é£Žé™©å…¬å¸æ€»ç»ç†å½­å¯æ˜Žåˆ†æžï¼Œä»Šå¹´ç¬¬23å·å“ˆéš†å°é£Žï¼Œé¢„è®¡æœªæ¥å‘è¥¿å‰è¿›åŽåŒ—è½¬ï¼Œå¯¹å°æ¹¾æ— ç›´æŽ¥å½±å“ã€‚â—‡</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šçŽ‰ç</p>
 
-<hr>
-
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/11/3/n11630428.htm">¶«±±·çÔöÇ¿ Ì¨ÍåÎ´À´Ò»ÖÜÊªÁ¹</a>
-
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11626422.htm">¼«¶ËÌìÆøÔÚ°ÄÖÞ¸÷µØµÇ³¡ Õþ¸®·¢²¼Ïø´­Ô¤¾¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625881.htm">ÌìÆøÍøÂçÔ¤²â£º¶àÂ×¶àÏÂÖÜËÄÓÐÑ©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/23/n11606424.htm">°Â¿ËÀ¼Ç¿·çÀ×ÓêÌìÆøÀ´Ï® ³öÐÐÇë×¢Òâ°²È«</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/19/n11598877.htm">±±¾©¶àÇøÏÖÒõö²ÌìÆø ¾ÖµØÎå¼¶ÖØ¶ÈÎÛÈ¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/17/n11593170.htm">ÌìÆøÔ¤²â£º½ñ¶¬´ó¶àÂ×¶àµØÇø¶à±©·çÑ©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/3/n11565381.htm">Å¨ÎíÌìÆø °²»Õ17³µÁ¬»·Ïà×² ÖÁÉÙ10ÈËËÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/3/n11564848.htm">Ä«¶û±¾ÌìÆø·´³£ ÆøÎÂÒ»·ÖÖÓÄÚÖè½µ4¶È</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/24/n11541548.htm">Çï¼¾¿ªÊ¼ ¶àÂ×¶àÌìÆøÎÂºÍ ÉÍ·ãºÃÊ±½Ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/16/n11526020.htm">ÌìÆøÍøÂç·¢²¼¼ÓÄÃ´óÇï¼¾Ô¤±¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/9/13/n11519022.htm">¡¶ÌìÆøÖ®×Ó¡·ÖÐÇï½ÚÇ°ÉÏÓ³ µÇÌ¨µ¥ÈÕÆ±·¿¹Ú¾ü</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11629334.htm">Íõ½¡ÁÖ¶ù×ÓÍõË¼´ÏÇå¿ÕÎ¢²© ÍøÂç·è´«</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11628953.htm">Ïã¸Û¸¡Ê¬°¸ Íø´«´óÂ½ÌØ¾¯½ÒÖÐ¹²¾øÃÜÉ±ÈËÄÚÄ»</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11629293.htm">¡¾ÐÂÎÅ¿´µã¡¿ÃÀ¹úÖÇ»ÛÆÆ½âÖÐ¹²Ð°Ëµ ±±¾©Ìø½Å</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11629530.htm">¡¾ÅÄ°¸¾ªÆæ¡¿11.2¸ÛÈË¶à´¦¼¯½á »ðÉÕÐÂ»ªÉç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11610224.htm">¸¸Ç×ÁÙÖÕÖ´ÒâÎÊËýÒª1000¿éÇ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11610675.htm">ËïÖÐÉ½ÇÉÃî»Ø´ð ÈÃ´«ËµÖÐµÄ´óÀÐÅõ¸¹´óÐ¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/24/n11610229.htm">³ö¼Ò²»¶ÝÊÀ ¸¨ÖúÃ÷³É×æµÃÌìÏÂµÄ¹ÖÉ®µÀÑÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/29/n11620112.htm">¡¾Èý¹úÓ¢ÐÛ¡¿Ö®Èý£º²Ü²ÙÓÄÄ¬ °®Ð¦°®¿Þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11627147.htm">ÓõÈ¡ÏûÁÖÖ£¼ÒÈËÓ¢¹ú¹ú¼® ÍøÂçÇ©Ãû³¬12Íò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11626688.htm">»ªÒá¾ÞÉÌÁõÌØ×ôÓëÃÀ¹úºÍ½â ½»³ö7ÒÚ×Ê²ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11626577.htm">ÓÐ¹ØÖÐ¹²ËÄÖÐÈ«»áµÄ´«ÑÔÊÇÕæ»¹ÊÇ¼Ù£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11629530.htm">¡¾ÅÄ°¸¾ªÆæ¡¿11.2¸ÛÈË¶à´¦¼¯½á »ðÉÕÐÂ»ªÉç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625266.htm">¡¾ÐÂÎÅ¿´µã¡¿ËÄÖÐÈ«»á½áÊø Í¸Â¶Îå´óÐÅºÅ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11628256.htm">¡¾ÅÄ°¸¾ªÆæ¡¿¸ÛÈË³Ö¾ÃÕ½ ºÍÀí·ÇÒþÐÎÕóÓªÇ¿´ó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/2/n11628658.htm">ElkieÓ­21ËêÉúÈÕ ×Óè¤ÓëÊæ»ªÒ»ÆðÎªËýÇìÉú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625725.htm">²»ÊÇÇ×ÉúÊ¤ËÆÇ×Éú ¶Ô¼ÌÅ®ÊÓÈç¼º³öµÄÃ÷ÐÇÃÇ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11626421.htm">ËÄ´¨³èÎï¿§·È¹Ý½«Ð¡¹·È¾³ÉÐÜÃ¨ ÍøÃñÅÚºä</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11627888.htm">±»µË³¬±ðÖÂ¶ú»·ÅªãÂ ËïÙ³Ïëµ½¿ê×ÓÊéÇ©¹Îðð°å</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/1/n11626784.htm">¡°¶ð»ÊÅ®Ó¢¡±¹ÊÊÂÎü¾¦ ³ÂÑÇÀ¼Îª¸è×ÐÏ·Á½Í·ÉÕ</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/lpbpi2994/djy/blob/master/gb/19/11/3/n11630428.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/lpbpi2994/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/lpbpi2994/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/lpbpi2994/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/lpbpi2994/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/9/13/n11519022.md#1">ã€Šå¤©æ°”ä¹‹å­ã€‹ä¸­ç§‹èŠ‚å‰ä¸Šæ˜  ç™»å°å•æ—¥ç¥¨æˆ¿å† å†›</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/9/16/n11526020.md#1">å¤©æ°”ç½‘ç»œå‘å¸ƒåŠ æ‹¿å¤§ç§‹å­£é¢„æŠ¥</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/9/24/n11541548.md#1">ç§‹å­£å¼€å§‹ å¤šä¼¦å¤šå¤©æ°”æ¸©å’Œ èµæž«å¥½æ—¶èŠ‚</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/10/3/n11564848.md#1">å¢¨å°”æœ¬å¤©æ°”åå¸¸ æ°”æ¸©ä¸€åˆ†é’Ÿå†…éª¤é™4åº¦</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/10/3/n11565381.md#1">æµ“é›¾å¤©æ°” å®‰å¾½17è½¦è¿žçŽ¯ç›¸æ’ž è‡³å°‘10äººæ­»</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/10/17/n11593170.md#1">å¤©æ°”é¢„æµ‹ï¼šä»Šå†¬å¤§å¤šä¼¦å¤šåœ°åŒºå¤šæš´é£Žé›ª</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/10/19/n11598877.md#1">åŒ—äº¬å¤šåŒºçŽ°é˜´éœ¾å¤©æ°” å±€åœ°äº”çº§é‡åº¦æ±¡æŸ“</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/10/23/n11606424.md#1">å¥¥å…‹å…°å¼ºé£Žé›·é›¨å¤©æ°”æ¥è¢­ å‡ºè¡Œè¯·æ³¨æ„å®‰å…¨</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/10/31/n11625881.md#1">å¤©æ°”ç½‘ç»œé¢„æµ‹ï¼šå¤šä¼¦å¤šä¸‹å‘¨å››æœ‰é›ª</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/11/1/n11626422.md#1">æžç«¯å¤©æ°”åœ¨æ¾³æ´²å„åœ°ç™»åœº æ”¿åºœå‘å¸ƒå“®å–˜é¢„è­¦</a></li>
+<hr>
+
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/17/n10063990.md#1" target="_blank">è‹æ™ºæ•ï¼šè¡€è…¥è®¡ç”Ÿæ‚²æ­Œâ€”â€”å¸®å‡¶  å¼ƒå’  æ³ªæ°´</a></li><li><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#1" target="_blank">ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/4/n10890780.md#1" target="_blank">å¤©ç©ºå‡ºçŽ°â€œçœŸå–„å¿â€ è¥¿æ¾³å¥³å­åœ†æ¢¦</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/14/n12474369.md#1">æ—¥æœ¬å‡ºçŽ°â€œUFOç©ºæˆ˜â€ç”»é¢ å¤šä¸ªè¿½èµ¶ä¸€ä¸ª</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12479879.md#1">æ›¾é¢„è¨€å·æ™®å½“é€‰ ä¼ æ•™å£«ï¼šä¸Šå¸æ´¾å¤©ä½¿åŠ©è¿žä»»</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/30/n12440550.md#1">ã€Šåœ£ç»ã€‹ä¸Žã€ŠæŽ¨èƒŒå›¾ã€‹é¢„è¨€çš„åº”éªŒä¸Žå˜æ¢1</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/3/n12378281.md#1">ã€è¥¿å®‰äº‹å˜?è’‹å®‹å¤«å¦‡ã€‘å¤©é™ç¥žè°• ä½¿å‘½ä¹‹è¡Œ</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/9/17/n12411954.md#1">ä¸œè¥¿æ–¹åœ°ç‹±è§é—» é‚ªæ·«è€…çš„æ‚²å£°</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483689.md#1">ã€è¿œè§å¿«è¯„ã€‘äº¨ç‰¹â€œç”µè„‘é—¨â€ä¸‰å¤§æ–°è¿›å±•</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484332.md#1">ã€ä¸¥çœŸç‚¹è¯„&amp;å¤–äº¤éƒ¨å¤§å®žè¯ã€‘æ‹œç™»å®¶ä¸‘é—» ä¹ å—å·¡</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12480830.md#1">ã€é‡æ’­ã€‘å·æ™®å¨æ–¯åº·æ˜Ÿå·žæ¼”è®² æ”¯æŒæ‰§æ³•æœºæž„</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481651.md#1">ã€æ–°é—»çœ‹ç‚¹ã€‘ä¹ çªè¿”äº¬æˆ–3åŽŸå›  æ‹œç™»å®¶ä¸‘é—»è¿žçˆ†</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482129.md#1">èµµç«‹åšè¯¬è”‘ç¾Žå†›æ’­æ¯’è®ºä»¤å·æ™®æ„¤æ€’è‡³æž</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482636.md#1">å¤§é™†äºŒæ‰‹æˆ¿å¸‚åœºåˆ†åŒ–ä¸¥é‡ æˆ¿åœ°äº§æ³¡æ²«è¦ç ´ï¼Ÿ</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481456.md#1">åˆ˜è¯—è¯—è‡ªæ›ä¸æ„¿ä¸Šç»¼è‰º ä¸ªä¸­åŽŸå› ä»¤äººåƒæƒŠ</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481895.md#1">ä¼ å‘¨æ˜Ÿé©°é‡é‡‘ç»­çº¦æž—å… ä¸ºå¯¹èµŒåè®®æ·»ä¿éšœ</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484792.md#1">æ´ªé‡‘å®æ‹„æ‹æ–è¿‘ç…§æ›å…‰ ç½‘æ°‘æƒŠè®¶</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482595.md#1">TWICEå®šå»¶å¿ƒç†ä¸å®‰ æš‚ä¸å‚ä¸Žæ­£è§„äºŒè¾‘ç­‰æ´»åŠ¨</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484953.md#1">ç« å­æ€¡äº§åŽé¦–ç§€ å‘é™…çº¿ä¸Šç§»å¼•çƒ­è®®</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/6/n12455916.md#1">è¿åŠ¨åŽåƒå¯¹ä¿®å¤è‚Œè‚‰ã€æ”¹å–„ç–²åŠ³ è¥å…»å¸ˆæŽ¨3é£Ÿè°±</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481202.md#1">æ¢å­£æµé¼»æ°´ã€çš®è‚¤ç—’ï¼Ÿè¿‡æ•è‡ªæ•‘æœ‰ä¸€å¥—</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481545.md#1">è‡ªåˆ¶3æ¯å¤©ç„¶è¿åŠ¨é¥®æ–™ æå‡å…ç–«åŠ›ã€æ”¹å–„ç–²åŠ³</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484089.md#1">ä¸¤å¤§ä¸€å°çš„ç™½é²¸ææµ… ä¿„ç½—æ–¯ç”·å­èŠ±7å°æ—¶è¥æ•‘</a></li>
+<li><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483851.md#1">æ„å¤§åˆ©å°é•‡ä»…ä½2äºº ä½†åšæŒæˆ´å£ç½©ä¿æŒè·ç¦»</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/oqzulz329/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/11/3/n11630428.htm">ä¸œåŒ—é£Žå¢žå¼º å°æ¹¾æœªæ¥ä¸€å‘¨æ¹¿å‡‰</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oqzulz329/djy/blob/master/gb/19/11/3/n11630428.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/oqzulz329/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqzulz329/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
