--- a/gb/20/10/17/n12482137.md
+++ b/gb/20/10/17/n12482137.md
@@ -28,10 +28,13 @@
 <h2>以下是<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>实时更新：</h2>
 <h3>美21州新病例数稳定 27个州上升 两州下降</h3>
 <p>美国<ahref="https://github.com/oqzulz329/djy/blob/master/gb/tag/%E6%9C%80%E6%96%B0%E7%96%AB%E6%83%85.md#1">最新疫情</a>数据显示，有21个州新增病例数呈稳定趋势，两个州呈下降趋势，27个州呈上升趋势。</p>
-<p>卫生专家说，全美各地病例数正在上升，似乎证实了秋季病例将激增这一预测。</p>
+<p>约翰·霍普金斯大学（Johns Hopkins University）的数据显示，截至周一（19日）早晨，美国确诊病例总数已超过800万，死亡人数超过21.9万。</p>
 <p>与前一周相比，有两个州新增病例数呈下降趋势。这两个州是夏威夷和佛蒙特州。</p>
 <p>有27个州新增病例数呈上升趋势，21个州呈稳定趋势。</p>
-<p>约翰·霍普金斯大学（Johns Hopkins University）的数据显示，截至周一（19日）早晨，美国确诊病例总数已超过800万，死亡人数超过21.9万。</p>
+<p>卫生专家说，全美各地病例数正在上升，似乎证实了秋季病例将激增这一预测。</p>
+<p>不过，美国首席传染病专家安东尼·福奇说，实行全国封锁并不是前进之路，除非大流行变得“真的很糟”。</p>
+<p>他上周日（18日）在受访中告诉CBS首席医学记者拉普克（Jonathan LaPook），疲惫的美国公众应该将公共卫生措施视为安全地保持开放的一种方式。</p>
+<p>专家说，美国人通过听从官员几个月来倡导的指导方针，可以帮助控制病毒：避免置身于拥挤的环境、保持距离，户外仅举行小型聚会和戴口罩。</p>
 <h3>疫情致空中旅行停滞以来 TSA单日筛查人数首破百万</h3>
 <p>美国运输安全管理局（TSA）表示，该机构上周日（18日）对超过100万人进行了筛查，这是自今年春季大流行导致空中旅行停滞以来，首次突破百万人。</p>
 <p>TSA说，上周日筛查了1,031,505人，大约是去年同一天筛查的260万人的40％。</p>
@@ -234,7 +237,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/15/n10219359.md#1" target="_blank">中共淫乱的前生今世（2）江氏“新时代”</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10006546.md#1" target="_blank">坚持共产体制推改革 波共前书记被轰下台</a></li><li><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/17/n11119803.md#1" target="_blank">见证奇迹 一位越南女子修炼法轮功的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
